--- a/MakeFile
+++ b/MakeFile
@@ -1,2 +1,8 @@
-gcc -c main.c dict.c
-gcc -o dictionary main.o dict.o
+main: main.o dict.o 
+ gcc -o dict main.o dict.o 
+main.o: main.c 
+ gcc -c main.c 
+dict.o: dict.c 
+ gcc -c dict.c 
+clean: 
+ rm -f *.o dict
